<?xml version="1.0" encoding="utf-8"?>
<tools:LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.MainActivity">

    <RadioGroup
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbAppCompact"
                android:text="@string/lbl_appcompat_theme"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbMaterial"
                android:text="@string/lbl_material_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="10dp"
            android:id="@+id/btnWithCL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_with_coordinator_layout"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWithoutCL"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_without_coordinator_layout"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCustomView"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_with_custom_view"/>

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDrawableAct"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_with_drawable"/>

</tools:LinearLayout>