<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.CustomViewAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/lbl_time_duration" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbLengthIndefinite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lbl_length_indefinite" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbLengthShort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_length_short" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbLengthLong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_length_long" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_padding" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_dash" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPaddingIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_zero" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sbPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:max="25" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShowCustomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_show_custom_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHideCustomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_hide_custom_view" />

    </LinearLayout>


</LinearLayout>