<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layout_bg"
        android:orientation="horizontal"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_show" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnHide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_hide" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_enter_message">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lbl_time_duration" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbLengthIndefinite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/lbl_length_indefinite" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbLengthShort"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_length_short" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbLengthLong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_length_long" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_padding" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_dash" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPaddingIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_zero" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sbPadding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:max="25" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lbl_with_action" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbWithAction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/lbl_show_action_button" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbWithoutAction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_hide_action_button" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_select_typeface" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/lbl_normal" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbBold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_bold" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_italic" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbBoldItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_bold_italic" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start|center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_text_color" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/ic_border"
                    android:padding="2dp">

                    <View
                        android:id="@+id/llTextColor"
                        android:layout_width="150dp"
                        android:layout_height="23dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start|center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBgColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_background_color" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/ic_border"
                    android:padding="2dp">

                    <View
                        android:id="@+id/llBgColor"
                        android:layout_width="150dp"
                        android:layout_height="23dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start|center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnActionTextColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_action_button_text_color" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/ic_border"
                    android:padding="2dp">

                    <View
                        android:id="@+id/llActionTextColor"
                        android:layout_width="150dp"
                        android:layout_height="23dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_corner_radius" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_dash" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCornerRadiusIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_zero" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sbCornerRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:max="15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start|center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBorderColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_border_color" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/ic_border"
                    android:padding="2dp">

                    <View
                        android:id="@+id/llBorderColor"
                        android:layout_width="150dp"
                        android:layout_height="23dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_border_width" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_dash" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvBorderIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_zero" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/sbBorderWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:max="5" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
